--- a/PROJECT DEVELOPMENT PHASE/SPRINT 2/MODEL BUILDING/Add_The_Pooling_Layer.ipynb
+++ b/PROJECT DEVELOPMENT PHASE/SPRINT 2/MODEL BUILDING/Add_The_Pooling_Layer.ipynb
@@ -7,8 +7,8 @@
       },
       "source": [
         "# IBM Project Name: Real-Time Communication System Powered by AI for Specially Abled\n",
-        "# TEAM ID: PNT2022TMID42055\n",
-        "# TEAM Lead:SOWMIYA P"
+        "# TEAM ID:   PNT2022TMID15666\n",
+        "# TEAM LEAD: DINESH K"
       ]
     },
     {
@@ -5377,11 +5377,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.9.6 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.9.6"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "6fe4714bd5ce26c50e16ce1c271df9023051780d2ddcdace95a80dfeffea871e"
+      }
     }
   },
   "nbformat": 4,
