--- a/MODEL BUILDING/Fit_And_Save_The_Model.ipynb
+++ b/MODEL BUILDING/Fit_And_Save_The_Model.ipynb
@@ -7,8 +7,8 @@
       },
       "source": [
         "# IBM Project Name: Real-Time Communication System Powered by AI for Specially Abled\n",
-        "# TEAM ID: PNT2022TMID42055\n",
-        "# TEAM MEMBER:THENNARASU R"
+        "# TEAM ID:   PNT2022TMID15666\n",
+        "# TEAM LEAD: DINESH K"
       ]
     },
     {
@@ -5541,17 +5541,17 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3.10.0 64-bit",
+      "display_name": "Python 3.9.6 64-bit",
       "language": "python",
       "name": "python3"
     },
     "language_info": {
       "name": "python",
-      "version": "3.10.0"
+      "version": "3.9.6"
     },
     "vscode": {
       "interpreter": {
-        "hash": "26de051ba29f2982a8de78e945f0abaf191376122a1563185a90213a26c5da77"
+        "hash": "6fe4714bd5ce26c50e16ce1c271df9023051780d2ddcdace95a80dfeffea871e"
       }
     }
   },
