--- a/MODEL BUILDING/Add_The_Pooling_Layer.ipynb
+++ b/MODEL BUILDING/Add_The_Pooling_Layer.ipynb
@@ -5377,11 +5377,18 @@
       "provenance": []
     },
     "kernelspec": {
-      "display_name": "Python 3",
+      "display_name": "Python 3.9.6 64-bit",
+      "language": "python",
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.9.6"
+    },
+    "vscode": {
+      "interpreter": {
+        "hash": "6fe4714bd5ce26c50e16ce1c271df9023051780d2ddcdace95a80dfeffea871e"
+      }
     }
   },
   "nbformat": 4,
